--- a/css/style.css
+++ b/css/style.css
@@ -51,19 +51,87 @@ img {
 .sobre-mi {
     display: flex;
     flex-direction: column-reverse;
+    padding: 3rem 0;
 }
 .texto-sobre-mi {
     font-family: 'Raleway', sans-serif;
+    padding-bottom: 1rem;
 }
 .texto-sobre-mi h3 {
     text-align: center;
     font-size: 2rem;
     font-weight: 600;
+    padding-bottom: 1rem;
+}
+.texto-sobre-mi p, a{
+    font-size: 1.3rem;
 }
 
 .nombre, .edad, .github {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    gap: 0.4rem;
     font-size: 1.5rem;
+    margin-left: 1.3rem;
+}
+.nombre p, 
+.edad p {
+    margin-bottom: 0;
+}
+.img-sobre-mi {
+    width: 370px;
+    align-self: center;
+}
+
+.github a {
+    text-decoration: underline;    
+}
+.mis-cursos {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Raleway', sans-serif;
+    background-color: aliceblue;
+    padding: 3rem 0;
+}
+.mis-cursos img {
+    width: 70px;
+}
+.contenido-mis-cursos {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.img-mis-cursos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+figure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.mis-cursos h3 {
+    align-self: center;
+    font-size: 2rem;
+    font-weight: 600;
+    padding-bottom: 1rem;
+}
+.texto-mis-cursos {
+    font-size: 1.3rem;
+    text-align: center;
+    padding: 0 0.5rem;
+}
+footer p {
+    margin: 0;
+}
+footer {
+    background-color: rgb(33, 37, 41);
+    height: 3rem;
+    color: whitesmoke;
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
