colocaion estilos pagina contacto

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ img {
     display: flex;
     flex-direction: column-reverse;
     padding: 3rem 0;
+    background-color: rgb(226, 221, 221);
 }
 .texto-sobre-mi {
     font-family: 'Raleway', sans-serif;
@@ -135,3 +136,31 @@ footer {
     justify-content: center;
     align-items: center;
 }
+
+.main-contacto {
+    height: 100vh;
+    background-color: rgb(226, 221, 221);
+}
+
+.texto-contacto {
+    font-size: 5vh;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    padding: 1.75rem 0;
+}
+
+.redes-contacto {
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 2rem;
+}
+
+.iconos-redes {
+    color: black;
+    font-size: 50px;
+    
+}
+
