colocacion estilos pagina comentarios

--- a/css/style.css
+++ b/css/style.css
@@ -164,3 +164,34 @@ footer {
     
 }
 
+.main-comentarios {
+    height: 100vh;
+    background-color: rgb(255, 243, 251);
+    padding: 1rem;
+}
+
+.texto-comentarios {
+    font-family:  'Raleway', sans-serif;
+    font-size: 3vh;
+    text-align: center;
+}
+
+.cuestionario-comentarios {
+    width: 100% ;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 3rem 0;
+}
+
+
+
+.mb-3{
+    width: 100% !important;
+    max-width: 400px !important;
+}
+
+.entradas-comentarios {
+    width: 100%;
+}
